EM model with exact posterior

--- a/classification-MNIST-covariance.ipynb
+++ b/classification-MNIST-covariance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,70 +37,97 @@
    "source": [
     "### Problem\n",
     "\n",
-    "We consider a egression problem with N-dimensional features $x$, scalar targets $t$ and known variance $\\sigma^2$ We wish to learn a bayesian linear model with learnt basis functions. \n",
+    "We consider a classification problem with $K$ classes, inputs $\\mathbf{x}$, and target classes $\\mathbf{t}$, where each target $t_i$ is a scalar denoting the class of $x_i$. We wish to learn a bayesian linear model with learnt basis functions, and take the output of such model as score for the different classes.\n",
     "\n",
-    "### Case of the known basis function\n",
+    "### Known basis function\n",
     "\n",
-    "In the case of a known deterministic N-dimensional basis function $\\phi$, le likelihood is expressed as:\n",
+    "In the case of a known deterministic $D$-dimensional basis function $\\phi$, the predicted probability for the different classes for example $x_i$ is:\n",
     "\n",
     "\\begin{align}\n",
-    "p(t | a, b, x, \\sigma) & = \\mathcal{N}(a \\phi(x) + b, \\sigma^2) \n",
+    "    \\mathbf{y} = \\mathrm{softmax} (\\mathbf{a} \\phi(x_i) + \\mathbf{b})\n",
     "\\end{align}\n",
+    "\n",
+    "where $\\mathbf{y}$ and $\\mathbf{b}$ are $K$-vectors, $\\mathbf{a}$ is a $K \\times D$ matrix, and the softmax is computed over the $K$ classes.\n",
+    "The likelihood of a data point $(x_i, t_i)$ is:\n",
+    "\n",
+    "\\begin{align}\n",
+    "p(t_i \\ |\\ \\mathbf{a}, \\mathbf{b}, x_i) & = y[t_i]\n",
+    "\\end{align}\n",
+    "\n",
+    "i.e. the model output for the true class $t_i$. Assuming independence, the likelihood of the parameters given the entire dataset is simply the product of the above.\n",
     "\n",
     "We define the prior over the parameters as an isotropic Gaussian, which gives:\n",
     "\n",
     "\\begin{align}\n",
-    " p(a) = \\mathcal{N}(0,1) \\qquad  p(b) = \\mathcal{N}(0,1)\n",
+    " p(\\mathbf{a}) = \\mathcal{N}(0,\\mathbf{I}) \\qquad  p(\\mathbf{b}) = \\mathcal{N}(0,\\mathbf{I})\n",
     "\\end{align}\n",
     "\n",
-    "It is then possible to compute the posterior of parameters analytically, given $(\\mathbf{x}, \\mathbf{t})$ the entire dataset:\n",
+    "The posterior of the parameters, with $(\\mathbf{x}, \\mathbf{t})$ the entire dataset, is:\n",
     "\n",
     "\\begin{align}\n",
-    "p(a,b |\\mathbf{t} , \\mathbf{x}, \\sigma^2) = \\frac{p(\\mathbf{t} | a, b, \\mathbf{x}, \\sigma^2) p(a,b)}{p(\\mathbf{t}, \\mathbf{x})}\n",
+    "p(\\mathbf{a}, \\mathbf{b} \\ |\\ \\mathbf{t} , \\mathbf{x}) = \\frac{p(\\mathbf{t}\\ |\\ \\mathbf{a}, \\mathbf{b}, \\mathbf{x}) p(\\mathbf{a}, \\mathbf{b})}{p(\\mathbf{t} \\ |\\ \\mathbf{x})}\n",
     "\\end{align}\n",
     "\n",
-    "$p(\\mathbf{t})$ is tractable and constant, hence we can also approximate the posterior using our favorite MCMC methods.\n",
+    "The denominator $p(\\mathbf{t} | \\mathbf{x})$ is tractable and constant, hence we can also approximate the posterior using our favorite MCMC methods.\n",
     "\n",
     "\n",
     "### Learnt basis function\n",
     "\n",
     "#### Bayes by Backprop\n",
     "\n",
-    "We propose to optimize $\\theta$ using maximum likelihood and $a, b$ using Variational Inference, which allows us deriving a lower bound of the marginal log likelihood (with regards to $a,b$) that we can optimize end-to-end. We have:\n",
+    "Let $\\mathbf{w}$ be the vector with all the parameters $\\mathbf{a}$ and $\\mathbf{b}$, having size $D' = (D+1)K$. As basis function we use $f_\\theta$, a neural network parameterized by a vector $\\theta$. This effectively corresponds to a neural network where the last layer is Bayesian.\n",
+    "\n",
+    "We approximate the posterior parameter distribution $p(\\mathbf{w} \\ |\\ \\mathcal{D})$ with\n",
+    "\n",
+    "$$q(\\mathbf{w}) = \\mathcal{N}(\\boldsymbol{\\mu}_{\\mathbf{w}}, \\boldsymbol{\\Sigma}_{\\mathbf{w}})$$\n",
+    "\n",
+    "and optimize this distribution with variational inference, whereas $\\theta$ is estimated by maximum likelihood. We do this by deriving a lower bound of the marginal log likelihood that we can optimize end-to-end with respect to $\\theta$, $\\boldsymbol{\\mu}_{\\mathbf{w}}$, and $ \\boldsymbol{\\Sigma}_{\\mathbf{w}}$. We have:\n",
     "\n",
     "\\begin{align}\n",
-    "\\log p(\\mathbf{t} | \\mathbf{x}, \\sigma^2, \\theta) & = \\log \\int_{a,b} \\log p(\\mathbf{t}, a, b, | \\mathbf{x}, \\sigma^2, \\theta) dadb \\\\\n",
-    "& = \\log \\int_{a,b} \\log p(\\mathbf{t} | a, b, \\mathbf{x}, \\sigma^2, \\theta)p(a,b) dadb \\\\\n",
-    "& = \\log \\int_{a,b} q(a,b) p(\\mathbf{t} | a, b, \\mathbf{x}, \\sigma^2, \\theta) \\frac{p(a,b)}{q(a,b)} dadb \\\\\n",
-    "& \\geq \\mathbb{E}_{q(a,b)} \\left[ \\log  p(\\mathbf{t} | a, b, \\mathbf{t}, \\sigma^2, \\theta) \\frac{p(a,b)}{q(a,b)} \\right] \\\\\n",
-    "& = \\mathbb{E}_q[\\log p_{\\theta}(\\mathbf{t}\\ |\\ a, b, \\mathbf{x})] - \\mathrm{KL}(q(a,b) \\ ||\\ p(a,b)) \\\\\n",
-    "= \\mathcal{L_(t, x)}\n",
+    "\\log p(\\mathbf{t} | \\mathbf{x};\\theta) & = \\log \\int_{\\mathbf{w}} p(\\mathbf{t}, \\mathbf{w} \\ |\\  \\mathbf{x};  \\theta) d\\mathbf{w} \\\\\n",
+    "& = \\log \\int_{\\mathbf{w}} p(\\mathbf{t} \\ |\\  \\mathbf{w}, \\mathbf{x};  \\theta)p(\\mathbf{w}) d\\mathbf{w} \\\\\n",
+    "& = \\log \\int_{\\mathbf{w}} q(\\mathbf{w}) p(\\mathbf{t} \\ |\\  \\mathbf{w}, \\mathbf{x};  \\theta) \\frac{p(\\mathbf{w})}{q(\\mathbf{w})} d\\mathbf{w} \\\\\n",
+    "& \\geq \\mathbb{E}_{q(\\mathbf{w})} \\left[ \\log  p(\\mathbf{t} \\ |\\ \\mathbf{w}, \\mathbf{x}; \\theta) \\frac{p(\\mathbf{w})}{q(\\mathbf{w})} \\right] \\\\\n",
+    "& = \\mathbb{E}_q[\\log p(\\mathbf{t}\\ |\\ \\mathbf{w}, \\mathbf{x}; \\theta)] - \\mathrm{KL}(q(\\mathbf{w}) \\ ||\\ p(\\mathbf{w})) \\\\\n",
+    "&= \\mathcal{L (q,\\theta)}\n",
     "\\end{align}\n",
     "\n",
     "#### Modelling the posterior of vector quantities with covariance\n",
     "\n",
-    "In this context, $a$ is a vector of size $N$ and $b$ a scalar. We write $v$ the vector representing all the parameters ${a_i}_a + b$. In this context, we choose to model the approximate posterior of $v$ using a **Multivariate Gaussian** parametrized by a Cholesky factor $L$, which allows us to apply the reparametrization trick [[Pathwise Derivatives Beyond the Reparameterization Trick]](https://arxiv.org/pdf/1806.01851.pdf):\n",
+    "We choose to model the approximate posterior of $\\mathbf{w}$ using a **Multivariate Gaussian** where the covariance matrix $\\boldsymbol{\\Sigma}$ is parametrized by using the Cholesky decomposition $\\boldsymbol{\\Sigma}=\\mathbf{L}\\mathbf{L}^T$, which allows us to apply the reparametrization trick:\n",
     "\n",
     "\\begin{align}\n",
-    "y \\sim \\mathcal{N}(\\mu, L) \\\\\n",
-    "y = \\mu + L \\epsilon \\\\\n",
-    "\\epsilon \\sim \\mathcal{N}(\\mu, I)\n",
+    "\\mathbf{w} = \\boldsymbol{\\mu} + \\mathbf{L} \\boldsymbol{\\epsilon}, \\quad \n",
+    "\\boldsymbol{\\epsilon} \\sim \\mathcal{N}(0, \\mathbf{I}) \\quad \\Rightarrow \\quad\n",
+    "\\mathbf{w} \\sim \\mathcal{N}(\\boldsymbol{\\mu}, \\boldsymbol{\\Sigma})\n",
     "\\end{align}\n",
     "\n",
-    "The covariance matrix is then defined as:\n",
+    "where we can easily see that the mean of $\\mathbf{w}$ is $\\boldsymbol{\\mu}$, and the covariance is indeed $\\boldsymbol{\\Sigma}$:\n",
     "\n",
-    "\\begin{aligned} \\boldsymbol{\\Sigma} &=\\mathbb{E}\\left[(\\mathbf{z}-\\mathbb{E}[\\mathbf{z} |])(\\mathbf{z}-\\mathbb{E}[\\mathbf{z} |])^{T}\\right] \\\\ &=\\mathbb{E}\\left[\\mathbf{L} \\boldsymbol{\\epsilon}(\\mathbf{L} \\boldsymbol{\\epsilon})^{T}\\right] \\\\ &=\\mathbb{E}\\left[\\mathbf{L} \\boldsymbol{\\epsilon} \\boldsymbol{\\epsilon}^{T} \\mathbf{L}^{T}\\right] \\\\ &=\\mathbf{L} \\mathbb{E}\\left[\\boldsymbol{\\epsilon} \\boldsymbol{\\epsilon}^{T}\\right] \\mathbf{L}^{T} \\\\ &=\\mathbf{L} \\mathbf{L}^{T} \\end{aligned}\n",
+    "\\begin{aligned}\n",
+    "\\mathrm{cov} (\\mathbf{w}) &=\\mathbb{E}\\left[(\\mathbf{w}-\\mathbb{E}[\\mathbf{w} ])(\\mathbf{w}-\\mathbb{E}[\\mathbf{w} ])^{T}\\right] \\\\ \n",
+    "&=\\mathbb{E}\\left[\\mathbf{L} \\boldsymbol{\\epsilon}(\\mathbf{L} \\boldsymbol{\\epsilon})^{T}\\right] \\\\ \n",
+    "&=\\mathbb{E}\\left[\\mathbf{L} \\boldsymbol{\\epsilon} \\boldsymbol{\\epsilon}^{T} \\mathbf{L}^{T}\\right] \\\\ \n",
+    "&=\\mathbf{L} \\mathbb{E}\\left[\\boldsymbol{\\epsilon} \\boldsymbol{\\epsilon}^{T}\\right] \\mathbf{L}^{T} \\\\ \n",
+    "&=\\mathbf{L} \\mathbf{L}^{T} = \\boldsymbol{\\Sigma}\n",
+    "\\end{aligned}\n",
     "\n",
     "\n",
-    "We can then write our ELBO as:\n",
+    "The two terms we need to compute the ELBO are as follows:\n",
     "\n",
     "\\begin{split}\n",
-    "\\mathbb{E}_q[\\log p_{\\theta}(\\mathbf{t}\\ |\\ a, b, \\mathbf{x})] =  \\mathbb{E}_q \\left[ \\sum_{x \\in \\mathbf{x}} \\left[ -\\frac{1}{2} \\log \\sigma^2 - \\frac{1}{2\\sigma^2} [(t - a f_{\\theta}(x) - b)^2] + \\mathrm{const.} \\right] \\right] \\\\\n",
-    "\\mathrm{KL}(q(v) \\ ||\\ p(v)) = -\\frac{1}{2} \\sum_{i\\in v} \\left(1 + \\log L_{i,i}^2 - \\mu_i^2 - L_{i,i}^2\\right)\n",
+    "\\mathbb{E}_q[\\log p(\\mathbf{t}\\ |\\ \\mathbf{w}, \\mathbf{x} ; \\theta)] &=  \\mathbb{E}_q \\left[ \\sum_{i = 1}^N \\log p(t_i \\ |\\ \\mathbf{w}, x_i) \\right] = \\mathbb{E}_q \\left[ \\sum_{i = 1}^N \\log y[t_i] \\right] \\\\\n",
+    "\\mathrm{KL}(q(\\mathbf{w}) \\ ||\\ p(\\mathbf{w})) &= -\\frac{1}{2} \\sum_{i=1}^{D'} \\left(1 + \\log L_{i,i}^2 - \\mu_i^2 - \\Sigma_{i,i}\\right)\n",
     "\\end{split}\n",
     "\n",
-    "**TODO: check if KL correct**\n",
+    "where $N$ is the data set size, and the expectation is estimated by MC. Here we used the KL divergence between multivariate Gaussian distributions:\n",
     "\n",
+    "\\begin{aligned}\n",
+    "\\mathrm{KL}(q\\ ||\\ p)\n",
+    "    &= \\frac{1}{2} \\left( \\log |\\boldsymbol{\\Sigma}_ p| - \\log |\\boldsymbol{\\Sigma}_ q| - D' + \\mathrm{tr} (\\boldsymbol{\\Sigma}_p^{-1} \\boldsymbol{\\Sigma}_q) + (\\boldsymbol{\\mu}_p - \\boldsymbol{\\mu}_q)^T  \\boldsymbol{\\Sigma}_p (\\boldsymbol{\\mu}_p - \\boldsymbol{\\mu}_q)\\right) \\\\\n",
+    "    & = \\frac{1}{2} \\left( - \\log \\left(|\\boldsymbol{L}|^2\\right) - D' + \\mathrm{tr} (\\boldsymbol{\\Sigma}_q) +  \\boldsymbol{\\mu}_q^T \\boldsymbol{\\mu}_q\\right) \\\\\n",
+    "    & = -\\frac{1}{2} \\left(D' + \\sum_{i=1}^{D'} \\log L_{ii}^2 - \\sum_{i=1}^{D'} (\\boldsymbol{\\Sigma}_q)_{ii} - \\sum_{i=1}^{D'} (\\boldsymbol{\\mu}_q)_i^2 \\right)\n",
+    "\\end{aligned}\n",
     "\n",
     "### Papers\n",
     "\n",
@@ -108,79 +135,29 @@
     "\n",
     "[Pathwise Derivatives Beyond the Reparameterization Trick](https://arxiv.org/pdf/1806.01851.pdf)\n",
     "\n",
-    "[Berkley Kingma ppt](https://berkeley-deep-learning.github.io/cs294-131-s17/slides/VAE%20talk.compressed.pdf)"
+    "[Kingma's Talk](https://berkeley-deep-learning.github.io/cs294-131-s17/slides/VAE%20talk.compressed.pdf)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Toy Dataset 1"
+    "#### small MNIST\n",
+    "\n",
+    "We using the MNIST dataset and sample 600 training examples."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# N = 150\n",
-    "# sigma = 0.2\n",
-    "# n_classes = 3\n",
-    "# true_a = np.array([0.6, 1, .3]).reshape(-1, 1)\n",
-    "# true_b = 0.2\n",
-    "# # x = np.linspace(-1, 1, N).reshape(-1, 1)\n",
-    "# x = np.random.rand(N, 1) * 2 - 1\n",
-    "# x = np.sort(x, axis=0)\n",
-    "# fx1 = x - 1\n",
-    "# fx2 = x**2\n",
-    "# fx3 = np.sin(12 * x)\n",
-    "# fx = np.concatenate((fx1, fx2, fx3), axis=-1)\n",
-    "# tmp = fx @ true_a + true_b + sigma*np.random.randn(*x.shape)  # function to compute labels\n",
-    "\n",
-    "# # Divide data interval in n_classes regions\n",
-    "# # thresholds = np.linspace(tmp.min() - 1e-3, tmp.max() + 1e-3, n_classes+1)  # equal size\n",
-    "# thresholds = np.percentile(tmp, np.linspace(0, 100, n_classes+1))  # balanced classes\n",
-    "\n",
-    "# # targets\n",
-    "# t = np.zeros((tmp.shape[0], n_classes), dtype=int)  # one-hot, shape (N, C)\n",
-    "# for i in range(n_classes):\n",
-    "#     t[:, i] = ((thresholds[i] < tmp) * (thresholds[i+1] >= tmp))[:, 0]\n",
-    "# t_values = t * np.arange(n_classes).reshape((1, -1))\n",
-    "# t_values = np.sum(t_values, 1)\n",
-    "\n",
-    "# plt.figure(figsize=(10, 7))\n",
-    "# plt.plot(x, fx @ true_a + true_b)\n",
-    "# plt.plot(x, fx, alpha=0.5)\n",
-    "# sns.scatterplot(x[:, 0], tmp[:, 0])\n",
-    "# for i in range(1, n_classes):\n",
-    "#     plt.plot([x[0], x[-1]], np.array([1., 1.]) * thresholds[i], color='k', alpha=0.5)\n",
-    "# plt.show()\n",
-    "\n",
-    "# sns.scatterplot(x[:, 0], t_values)\n",
-    "# plt.ylabel('class')\n",
-    "# plt.show()\n",
-    "\n",
-    "# print('x shape:', x.shape)\n",
-    "# print('f shape:', fx.shape)\n",
-    "# print('true_a shape:', true_a.shape)\n",
-    "# print('t shape:', t.shape)\n",
-    "# print('t_values shape:', t_values.shape)\n",
-    "\n",
-    "# x = torch.tensor(x, dtype=torch.float)\n",
-    "# t_values = torch.tensor(t_values, dtype=torch.long)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "600\n"
+      "Number of training examples: 600\n",
+      "Number of testing examples: 10000\n"
      ]
     }
    ],
@@ -224,7 +201,8 @@
     "    batch_size=test_batch_size, shuffle=True, **kwargs)\n",
     "\n",
     "n_classes = 10\n",
-    "print(len(train_loader.dataset))"
+    "print(f\"Number of training examples: {len(train_loader.dataset)}\")\n",
+    "print(f\"Number of testing examples: {len(test_loader.dataset)}\")"
    ]
   },
   {
@@ -357,9 +335,35 @@
    "source": [
     "### Optimize\n",
     "\n",
-    "Here we maximize the ELBO $\\mathcal{L}$ with respect to variational parameters $\\mu_a, \\sigma_a, \\mu_b, \\sigma_b$, the NN parameters $\\theta$, and the noise std $\\sigma$.\n",
+    "#### Objective\n",
     "\n",
-    "##### TODO: compensate for batch size"
+    "Here we maximize the ELBO $\\mathcal{L}$ with respect to the variational parameters $\\boldsymbol{\\mu}_{\\mathbf{w}}$ and $\\boldsymbol{\\Sigma}_{\\mathbf{w}}$, and the NN parameters $\\theta$.\n",
+    "\n",
+    "First we train the model with ML (no sampling, just train means), then compare with the Bayesian one.\n",
+    "\n",
+    "#### Mini-batch\n",
+    "\n",
+    "We compute the ELBO per mini-batch and not on the entire dataset. Consequently, we need to reweight the $KL$ such as:\n",
+    "\n",
+    "\\begin{align}\n",
+    "ELBO_{mini batch} = \\sum_{i=1}^n \\log p(t | w, x) - \\frac{1}{N_{batches}} KL( q(w) || p(w) )\n",
+    "\\end{align}\n",
+    "\n",
+    "#### Marginal predictive log-likelihood\n",
+    "\n",
+    "We also estimate the marginal predictive log-likelihood as:\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "\\log p(\\mathbf{t} | \\mathbf{x}, \\mathcal{D}; \\theta) & = \\log \\int_{\\mathbf{w}} p(\\mathbf{t} \\ |\\ \\mathbf{w}, \\mathbf{x};  \\theta) p(\\mathbf{w}\\ |\\ \\mathcal{D}) d\\mathbf{w}\\\\\n",
+    "& \\approx \\log \\int_{\\mathbf{w}} p(\\mathbf{t} \\ |\\ \\mathbf{w}, \\mathbf{x};  \\theta) q(\\mathbf{w}\\ |\\ \\mathcal{D}) d\\mathbf{w}\\\\\n",
+    "&= \\log \\mathbb{E}_{q(\\mathbf{w}\\ |\\ \\mathcal{D})} \\left[p(\\mathbf{t} \\ |\\ \\mathbf{w}, \\mathbf{x};  \\theta)\\right]  \\\\\n",
+    "& \\approx \\log \\left( \\frac{1}{S} \\sum_{s=1}^S p(\\mathbf{t} \\ |\\ \\mathbf{w}_s, \\mathbf{x};  \\theta) \\right) \\\\\n",
+    "&= \\log \\left(\\sum_{s=1}^S p(\\mathbf{t} \\ |\\ \\mathbf{w}_s, \\mathbf{x};  \\theta) \\right) - \\log S\n",
+    "\\end{aligned}\n",
+    "\n",
+    "where the inputs and targets of the test set are denoted as $\\mathbf{x}$ and $\\mathbf{t}$ respectively, $\\mathcal{D}$ is the whole training set, and the weights are sampled from the approximate posterior:\n",
+    "\n",
+    "$$\\mathbf{w}_s \\sim q(\\mathbf{w} \\ |\\ \\mathcal{D})$$"
    ]
   },
   {
@@ -428,7 +432,6 @@
     "\n",
     "optimiser = torch.optim.Adam(list(model.parameters()), lr = l_rate)\n",
     "    \n",
-    "\n",
     "test_accs, test_logp, test_steps = [], [], []\n",
     "step = 0\n",
     "for epoch in range(1, epochs + 1):\n",
