--- a/regression Nd-1d-Covariance.ipynb
+++ b/regression Nd-1d-Covariance.ipynb
@@ -82,7 +82,7 @@
     "\n",
     "#### Modelling the posterior of vector quantities with covariance\n",
     "\n",
-    "We choose to model the approximate posterior of $\\mathbf{w}$ using a **Multivariate Gaussian** where the covariance matrix $\\boldsymbol{\\Sigma}$ is parametrized by using the Cholesky decomposition $\\boldsymbol{\\Sigma}=\\mathbf{L}\\mathbf{L}^T$, which allows us to apply the reparametrization trick [[Pathwise Derivatives Beyond the Reparameterization Trick]](https://arxiv.org/pdf/1806.01851.pdf):\n",
+    "We choose to model the approximate posterior of $\\mathbf{w}$ using a **Multivariate Gaussian** where the covariance matrix $\\boldsymbol{\\Sigma}$ is parametrized by using the Cholesky decomposition $\\boldsymbol{\\Sigma}=\\mathbf{L}\\mathbf{L}^T$, which allows us to apply the reparametrization trick:\n",
     "\n",
     "\\begin{align}\n",
     "\\mathbf{w} = \\boldsymbol{\\mu} + \\mathbf{L} \\boldsymbol{\\epsilon}, \\quad \n",
@@ -123,7 +123,7 @@
     "\n",
     "[Pathwise Derivatives Beyond the Reparameterization Trick](https://arxiv.org/pdf/1806.01851.pdf)\n",
     "\n",
-    "[Berkley Kingma ppt](https://berkeley-deep-learning.github.io/cs294-131-s17/slides/VAE%20talk.compressed.pdf)"
+    "[Kingma's Talk](https://berkeley-deep-learning.github.io/cs294-131-s17/slides/VAE%20talk.compressed.pdf)"
    ]
   },
   {
@@ -655,9 +655,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (venv-py3)",
+   "display_name": "Python [conda env:main]",
    "language": "python",
-   "name": "venv-py3"
+   "name": "conda-env-main-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -669,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
