some more visualisation

--- a/regression-Nd-1d-exact-posterior.ipynb
+++ b/regression-Nd-1d-exact-posterior.ipynb
@@ -117,6 +117,9 @@
     "#### Case 1: Known basis functions\n",
     "\n",
     "\n",
+    "In the case of known basis functions, the posterior is parametrized by the following:\n",
+    "\n",
+    "\n",
     "\\begin{align}\n",
     "\\Sigma = \\left( I + \\frac{1}{\\sigma^2} f(x)^T f(x) \\right)^{-1} \\qquad \\mu = \\Sigma \\frac{1}{\\sigma^2} f(x)^T  t \n",
     "\\end{align}"
@@ -215,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Learn the basis functions following the EM algorithm"
+    "#### Case 2: Learn the basis functions following the EM algorithm"
    ]
   },
   {
