--- a/regression Nd-1d-Covariance.ipynb
+++ b/regression Nd-1d-Covariance.ipynb
@@ -655,9 +655,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:main]",
+   "display_name": "Python (venv-py3)",
    "language": "python",
-   "name": "conda-env-main-py"
+   "name": "venv-py3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -669,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
