Updated classification toy example

--- a/classification-toyexample-covariance.ipynb
+++ b/classification-toyexample-covariance.ipynb
@@ -133,13 +133,7 @@
     "\n",
     "[Pathwise Derivatives Beyond the Reparameterization Trick](https://arxiv.org/pdf/1806.01851.pdf)\n",
     "\n",
-    "[Kingma's Talk](https://berkeley-deep-learning.github.io/cs294-131-s17/slides/VAE%20talk.compressed.pdf)\n",
-    "\n",
-    "\n",
-    "### Possible stuff to think about\n",
-    "\n",
-    "- variational distribution on _all_ network parameters?\n",
-    "- can we iteratively do SGD on the whole network and optimize analytically the last layer (at least in the regression case)?"
+    "[Kingma's Talk](https://berkeley-deep-learning.github.io/cs294-131-s17/slides/VAE%20talk.compressed.pdf)\n"
    ]
   },
   {
@@ -1187,16 +1181,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Key points\n",
-    "\n",
-    "* Bayesian model seems not to overfit \n",
-    "* same accuarcy but better likelihood => better uncertainty?\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1206,9 +1190,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:main]",
+   "display_name": "Python (venv-py3)",
    "language": "python",
-   "name": "conda-env-main-py"
+   "name": "venv-py3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1220,7 +1204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
