--- a/2-classification-toyexample-covariance.ipynb
+++ b/2-classification-toyexample-covariance.ipynb
@@ -1190,9 +1190,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (venv-py3)",
+   "display_name": "Python [conda env:main]",
    "language": "python",
-   "name": "venv-py3"
+   "name": "conda-env-main-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1204,7 +1204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
