fixed Latex to compile to PDF (use only align)

--- a/Walkthrough.ipynb
+++ b/Walkthrough.ipynb
@@ -260,9 +260,11 @@
     "\n",
     "We approximate the posterior parameter distribution $p(\\mathbf{w} \\ |\\ \\mathcal{D})$ with\n",
     "\n",
-    "$$q(\\mathbf{w}) = \\mathcal{N}(\\boldsymbol{\\mu}_{\\mathbf{w}}, \\boldsymbol{\\Sigma}_{\\mathbf{w}})$$\n",
+    "\\begin{align}\n",
+    "q(\\mathbf{w}) = \\mathcal{N}(\\boldsymbol{\\mu}_{\\mathbf{w}}, \\boldsymbol{\\Sigma}_{\\mathbf{w}})\n",
+    "\\end{align}\n",
     "\n",
-    "and optimize this distribution with variational inference, whereas $\\theta$ and $\\sigma^2$ are estimated by maximum likelihood. We do this by deriving a lower bound (**ELBO**) of the marginal log likelihood that we can optimize end-to-end with respect to $\\theta$, $\\sigma^2$, $\\boldsymbol{\\mu}_{\\mathbf{w}}$, and $ \\boldsymbol{\\Sigma}_{\\mathbf{w}}$. We have:\n",
+    "and optimize this distribution with variational inference, whereas $\\theta$ and $\\sigma^2$ are estimated by maximum likelihood. We do this by deriving a lower bound (**ELBO**) of the marginal log likelihood that we can optimize end-to-end with respect to $\\theta$, $\\sigma^2$, $\\boldsymbol{\\mu}_{\\mathbf{w}}$, and $\\boldsymbol{\\Sigma}_{\\mathbf{w}}$. We have:\n",
     "\n",
     "\\begin{align}\n",
     "\\log p(\\mathbf{t} | \\mathbf{x};\\theta) & = \\log \\int_{\\mathbf{w}} p(\\mathbf{t}, \\mathbf{w} \\ |\\  \\mathbf{x};  \\theta) d\\mathbf{w} \\\\\n",
@@ -285,30 +287,30 @@
     "\n",
     "where we can easily see that the mean of $\\mathbf{w}$ is $\\boldsymbol{\\mu}$, and the covariance is indeed $\\boldsymbol{\\Sigma}$:\n",
     "\n",
-    "\\begin{aligned}\n",
+    "\\begin{align}\n",
     "\\mathrm{cov} (\\mathbf{w}) &=\\mathbb{E}\\left[(\\mathbf{w}-\\mathbb{E}[\\mathbf{w} ])(\\mathbf{w}-\\mathbb{E}[\\mathbf{w} ])^{T}\\right] \\\\ \n",
     "&=\\mathbb{E}\\left[\\mathbf{L} \\boldsymbol{\\epsilon}(\\mathbf{L} \\boldsymbol{\\epsilon})^{T}\\right] \\\\ \n",
     "&=\\mathbb{E}\\left[\\mathbf{L} \\boldsymbol{\\epsilon} \\boldsymbol{\\epsilon}^{T} \\mathbf{L}^{T}\\right] \\\\ \n",
     "&=\\mathbf{L} \\mathbb{E}\\left[\\boldsymbol{\\epsilon} \\boldsymbol{\\epsilon}^{T}\\right] \\mathbf{L}^{T} \\\\ \n",
     "&=\\mathbf{L} \\mathbf{L}^{T} = \\boldsymbol{\\Sigma}\n",
-    "\\end{aligned}\n",
+    "\\end{align}\n",
     "\n",
     "\n",
     "The two terms we need to compute the ELBO are as follows:\n",
     "\n",
-    "\\begin{split}\n",
+    "\\begin{align}\n",
     "\\mathbb{E}_q[\\log p(\\mathbf{t}\\ |\\ \\mathbf{a}, b, \\mathbf{x} ; \\theta, \\sigma^2)] &=  \\mathbb{E}_q \\left[ \\sum_{i = 1}^N \\left[ -\\frac{1}{2} \\log \\sigma^2 - \\frac{1}{2\\sigma^2} [(t_i - \\mathbf{a} f_{\\theta}(x_i) - b)^2] + \\mathrm{const.} \\right] \\right] \\\\\n",
     "\\mathrm{KL}(q(\\mathbf{w}) \\ ||\\ p(\\mathbf{w})) &= -\\frac{1}{2} \\sum_{i=1}^{D'} \\left(1 + \\log L_{i,i}^2 - \\mu_i^2 - \\Sigma_{i,i}\\right)\n",
-    "\\end{split}\n",
+    "\\end{align}\n",
     "where $N$ is the data set size.\n",
     "\n",
     "Here we used the KL divergence between multivariate Gaussian distributions:\n",
-    "\\begin{aligned}\n",
+    "\\begin{align}\n",
     "\\mathrm{KL}(q\\ ||\\ p))\n",
     "    &= \\frac{1}{2} \\left( \\log |\\boldsymbol{\\Sigma}_ p| - \\log |\\boldsymbol{\\Sigma}_ q| - D' + \\mathrm{tr} (\\boldsymbol{\\Sigma}_p^{-1} \\boldsymbol{\\Sigma}_q) + (\\boldsymbol{\\mu}_p - \\boldsymbol{\\mu}_q)^T  \\boldsymbol{\\Sigma}_p (\\boldsymbol{\\mu}_p - \\boldsymbol{\\mu}_q)\\right) \\\\\n",
     "    & = \\frac{1}{2} \\left( - \\log \\left(|\\boldsymbol{L}|^2\\right) - D' + \\mathrm{tr} (\\boldsymbol{\\Sigma}_q) +  \\boldsymbol{\\mu}_q^T \\boldsymbol{\\mu}_q\\right) \\\\\n",
     "    & = -\\frac{1}{2} \\left(D' + \\sum_{i=1}^{D'} \\log L_{ii}^2 - \\sum_{i=1}^{D'} (\\boldsymbol{\\Sigma}_q)_{ii} - \\sum_{i=1}^{D'} \\mu_i^2 \\right)\n",
-    "\\end{aligned}\n",
+    "\\end{align}\n",
     "\n",
     "### References\n",
     "\n",
@@ -789,17 +791,19 @@
     "\n",
     "We also estimate the marginal predictive log-likelihood as:\n",
     "\n",
-    "\\begin{aligned}\n",
+    "\\begin{align}\n",
     "\\log p(\\mathbf{t} | \\mathbf{x}, \\mathcal{D}; \\theta) & = \\log \\int_{\\mathbf{w}} p(\\mathbf{t} \\ |\\ \\mathbf{w}, \\mathbf{x};  \\theta) p(\\mathbf{w}\\ |\\ \\mathcal{D}) d\\mathbf{w}\\\\\n",
     "& \\approx \\log \\int_{\\mathbf{w}} p(\\mathbf{t} \\ |\\ \\mathbf{w}, \\mathbf{x};  \\theta) q(\\mathbf{w}\\ |\\ \\mathcal{D}) d\\mathbf{w}\\\\\n",
     "&= \\log \\mathbb{E}_{q(\\mathbf{w}\\ |\\ \\mathcal{D})} \\left[p(\\mathbf{t} \\ |\\ \\mathbf{w}, \\mathbf{x};  \\theta)\\right]  \\\\\n",
     "& \\approx \\log \\left( \\frac{1}{S} \\sum_{s=1}^S p(\\mathbf{t} \\ |\\ \\mathbf{w}_s, \\mathbf{x};  \\theta) \\right) \\\\\n",
     "&= \\log \\left(\\sum_{s=1}^S p(\\mathbf{t} \\ |\\ \\mathbf{w}_s, \\mathbf{x};  \\theta) \\right) - \\log S\n",
-    "\\end{aligned}\n",
+    "\\end{align}\n",
     "\n",
     "where the inputs and targets of the test set are denoted as $\\mathbf{x}$ and $\\mathbf{t}$ respectively, $\\mathcal{D}$ is the whole training set, and the weights are sampled from the approximate posterior:\n",
     "\n",
-    "$$\\mathbf{w}_s \\sim q(\\mathbf{w} \\ |\\ \\mathcal{D})$$\n",
+    "\\begin{align}\n",
+    "\\mathbf{w}_s \\sim q(\\mathbf{w} \\ |\\ \\mathcal{D})\n",
+    "\\end{align}\n",
     "\n",
     "#### Train the Maximum Likelihood model"
    ]
@@ -2186,32 +2190,25 @@
     "\n",
     "While other approaches are computationally expensive such as the Bayesian Neural Networks, our approach remains computationally efficient. This opens a novel way to exploit the Bayesian paradigm at scale."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:main]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-env-main-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
