removed section numbers + conclusion

--- a/DeepBayes.ipynb
+++ b/DeepBayes.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "# Deep Bayes: Bayesian Regression using Deep Basis Functions\n",
     "\n",
-    "## 0. Introduction\n",
+    "## Introduction\n",
     "\n",
     "### Data\n",
     "\n",
@@ -102,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Bayesian Regression with Known Basis Functions\n",
+    "## Bayesian Regression with Known Basis Functions\n",
     "\n",
     "\n",
     "\n",
@@ -232,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Problem: How to perform Bayesian Regression in the case of Unknown basis functions?\n",
+    "## Problem: How to perform Bayesian Regression in the case of Unknown basis functions?\n",
     "\n",
     "The classical approach consists in using a fixed set of transformations as basis functions (e.g. $sin(x), x^2, x^3$, etc..)). However this approach lacks of generality, fails to scale to more complex problems such as logistic regression on a set of images (see MNIST experiment) and requires expert knowledge to design the basis functions.\n",
     "\n",
@@ -243,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Bayesian Regression with learnt basis function $\\phi_{\\theta}$\n",
+    "## Bayesian Regression with learnt basis function $\\phi_{\\theta}$\n",
     "\n",
     "In this section we use Variational Inference to approximate the true posterior $p(\\mathbf{w}\\ |\\ \\mathbf{t} , \\mathbf{x}; \\sigma^2)$ and optimize the parameters of the basis function $\\phi_{\\theta}$ using maximum likelihood.\n",
     "\n",
@@ -610,7 +610,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Deep Classifier with Bayesian Likelihood$\n",
+    "## Deep Classifier with Bayesian Likelihood\n",
     "\n",
     "Overfitting is a fondamental issue in Deep Learning because it relies on the use of powerful function approximators (neural network) and Maximum Likelihood Estimation. This regression problem highlights well the ability of our method to combine uncertainty estimation with neural networks. Can we extend this method to classification problems?\n",
     "\n",
@@ -1079,7 +1079,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualizing the Models' Uncertainty "
+    "### Visualizing Uncertainty "
    ]
   },
   {
@@ -1448,7 +1448,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Application: Classification of hand-written digits\n",
+    "## Application: Classification of hand-written digits\n",
     "\n",
     "Using a simple dataset, showed that our bayesian model is able to handle uncertainty. We will know analyse the behaviour of our model in the context of a classification task from natural images.\n",
     "\n",
@@ -2052,7 +2052,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Behavior for different levels of perturbations\n",
+    "### Behavior under different levels of perturbations\n",
     "\n",
     "We measure the likelihood, the entropy of the logits and the accuracy on the test set for different level of noises. A model that is uncertain generate high entropy decisions (flat distribution). We expect a model that handles well uncertainty to produce higher entropy decisions as the perturbation grows."
    ]
@@ -2182,13 +2182,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7. Conclusion\n",
+    "## Conclusion\n",
     "\n",
-    "Guided by a simple example of linear regression with unknown basis functions, we proposed to learn the basis functions end-to-end with the Bayesian regression layer. In order to do so, we use Variational Inference to approximate the posterior using a parametric Multivariate Gaussian and train the entire model using Bayes by Backprop. \n",
+    "Guided by a simple example of linear regression with unknown basis functions, we proposed to learn the basis functions end-to-end with the Bayesian regression layer. In order to do so, we use Variational Inference to modelled the posterior using a parametric Multivariate Gaussian and trained the entire model using Bayes by Backprop. \n",
     "\n",
-    "We then showed that the approach was viable for regression and classification using simple toy examples. Last, we applied our model to the MNIST dataset and showed that our approach induces a strong regularizing behaviour, which is compatible with dropout. In particular, we observed the resilience of our model to perturbations in the input and showed that the Bayesian approach tends to produce more uncertain decisions when fed with unknown inputs while the ML models remain over-confident.\n",
+    "We then showed that the approach was viable for regression and classification using simple toy examples. Last, we applied our model to the MNIST dataset and showed that our approach comes with a strong regularizing effect. In particular, we tested the resilience of our model to perturbations in the input and showed that the Bayesian approach yields more faithful confidence estimates: Bayes gives more uncertain decisions when fed with unknown inputs while the ML models remain over-confident.\n",
     "\n",
-    "While other approaches are computationally expensive such as the Bayesian Neural Networks, our approach remains computationally efficient. This opens a novel way to exploit the Bayesian paradigm at scale."
+    "Futhermore, while other approaches such as the Bayesian Neural Networks are computationally expensive, our approach remains computationally efficient. This opens a novel way to exploit the Bayesian paradigm at scale."
    ]
   }
  ],
